# ChoCacao

./: .gitignore  README.md  pyproject.toml  requirements.txt  specifications.md  streamlit_app.py
.streamlit/: config.toml
ADR/: 0001-record-architecture-decisions.md  0002-data-sources.md  0003-grid-design.md  0004-commune-mapping.md  0005-runtime-architecture-and-caching.md  0006-ui-and-google-maps-links.md  0006-ui-and-tables.md  0007-tooling-and-deployment.md  0008-french-map-and-detail-dialog.md  0009-departement-derivation.md  0010-populous-cities-and-commune-index.md  0011-manual-commune-lookup.md  0012-show-all-communes-single-table-diverging-map.md
chocacao/: __init__.py  build_cities.py  build_grid.py  build_index.py  communes.py  departements.py  forecast.py  geocode.py  grid.py
data/: communes_index.csv  grid_points.csv
