[project]
name = "chocacao"
version = "0.1.0"
description = "Find the 20 hottest and 20 coolest places in France for a given date and hour."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "requests>=2.32",
    "pandas>=2.2",
]

# This is an application, not a distributable library: do not build/install the
# project itself, only its dependencies. streamlit_app.py imports the local
# `chocacao` package via the repository root being on sys.path.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["chocacao", "streamlit_app.py"]
reportMissingImports = true
